<resources>
    <string name="app_name">MilenioApp</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="izquierda">«</string>
    <string name="derecha">»</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear">Crear ▼</string>
    <string name="historialzservicios">Historial de servicios ▼</string>
    <string name="ver"><u>Ver</u></string>
    <string name="enviaremail"><u>Enviar por email</u></string>
    <string name="cronograma"><u>Ver cronograma servicios</u></string>
    <string name="firmacompañante"><u>Firma acompañante</u></string>
    <string name="firmaoperario"><u>Firma operario técnico</u></string>
    <string name="editarcorreo"><u>Editar correo electrónico</u></string>
    <string name="fecha_20_04_20">Fecha: 20/04/20</string>
    <string name="p_gina_1_1">Página 1-1</string>
    <string name="c_digo_fo_gs_03">Código FO-GS-03</string>
    <string name="versi_n_02">Versión 02</string>
    <string name="lampara_n">Lampara N°</string>
    <string name="n">N°</string>
    <string name="estado">Estado:</string>
    <string name="inspecci_n_n">Inspección N°</string>
    <string name="datos">Datos del servicio</string>
</resources>
