<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ordenes.certificado.CertificadosMobileFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:background="@color/blueMilenio"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="200px">

            <LinearLayout
                android:layout_weight="30"
                android:layout_width="0dp"
                android:background="@drawable/et_style_header"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_margin="5dp"
                    android:background="@drawable/logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <LinearLayout
                android:layout_weight="70"
                android:layout_width="0dp"
                android:background="@drawable/et_style_header"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Certificado de control y \n prevención de plagas"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Dando cumplimiento al Decreto 1843 de 1991, certificamos que se ha realizado el Manejo Integrado de Plagas a la siguiente empresa, siguiendo todos los lineamientos exigidos por la entidad que nos rige."
                android:layout_gravity="center"
                android:gravity="center" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/c_digo_fo_gs_03" />

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="50"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/versi_n_02" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_20_04_20" />

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/p_gina_1_1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="70"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:background="@color/white"
                    android:hint="Empresa">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiEmpresa"
                        android:layout_width="match_parent"
                        style="@style/CustomTextStyle"
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="30"
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Fecha">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tifecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextStyle"
                        android:enabled="false"
                        android:inputType="date"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="60"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:background="@color/white"
                    android:hint="Cliente">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiCliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="text"
                        style="@style/CustomTextStyle"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="20"
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Nit">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiNit"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextStyle"
                        android:inputType="text"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="30"
                    android:layout_width="0dp"
                    android:background="@color/white"

                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:hint="DD/MM/AA">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiFechaActual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        style="@style/CustomTextStyle"
                        android:inputType="date"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="60"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:enabled="false"
                    android:hint="Contacto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiContacto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:enabled="false"
                        style="@style/CustomTextStyle"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="40"
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:hint="Telefono">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        style="@style/CustomTextStyle"
                        android:inputType="text"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="60"
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:hint="Direccion">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiDireccion"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        style="@style/CustomTextStyle"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:layout_weight="40"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:background="@color/white"
                    android:hint="Sede">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiSede"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="text"
                        style="@style/CustomTextStyle"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>